tests/NormalTests/paczka1/fuzzy1/79387612.err
Error in line 9: qf0jUQ S670 41,3
Error in line 14: qf0jUQ A832 27,2
Error in line 19: T5Bih S670 39,6
Error in line 20: qf0jUQ S447 21,7
Error in line 18: qZA3F A780 79,7
